--- a/web-dev/it161/index.html
+++ b/web-dev/it161/index.html
@@ -17,10 +17,11 @@
             <a href="http://web-students.net/site116/it161/aia.html">AIA</a>
             <a href="http://web-students.net/site116/it161/big/index.html">BIG</a>
             <a href="https://w3schools.com" target="_blank">W3 Schools</a>
-            <a href="https://linkedin.com/learning/login" target="_blank">LinkedIn Learning Library</a>
+            <a href="https://linkedin.com/learning/login" target="_blank">LinkedIn Learning</a>
             <a href="http://web-students.net/site116/it161/flowchart.html">Flowchart</a>
             <a href="http://web-students.net/site116/it161/fp/index.html">Final Project</a>
-            <a href="http://web-students.net/site116/it161/contact.php">Contact Marcus</a>
+            <a href="http://web-students.net/site116/it161/about.html">About Me</a>
+            <a href="http://web-students.net/site116/it161/contact.php">Contact</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
         </header>
@@ -28,37 +29,37 @@
             <img class="desktop" src="images/desktop.jpg" alt="Desktop photo" />  
             <img class="tablet" src="images/tablet.jpg" alt="Tablet photo" />  
             <img class="phone" src="images/phone.jpg" alt="Phone photo">
-                <h2 class="subheader">Welcome!</h2>
-                <p>Welcome to my Web Authoring 1 personal portfolio and landing page! The purpose of this page is to introduce myself, demonstrate what I have learned, and provide a foundation for building my future developer portfolio. Over time I will include further links to the projects I have completed, or to those which I have become involved with. Aside from my projects, I will also provide links to resources, lessons, tutorials, and other development related information which I find to be particularly useful. Note that this website is a working copy or "rolling release" of sorts, and as such the format and content provided within it is subject to change. I will do my best to keep a record of those changes but for the exact details refer to my GitHub. Now with all that said, let me share a little bit about myself, my background, and what has brought me here.</p>
-                <p>I suppose my story starts in the year 1999. "Y2K" was in the minds of many and not yet a memory to look back upon and chuckle. Companies that had survived the dotcom era were gaining traction and would go on to become our current leaders and innovators. The "browser wars" were finally over, Mozilla was rising from the ashes of Netscape, and the open-source software movement was about to take the world by storm. Overall, it was a very exciting time in the history of the IT industry.</p>
-                <p>At home, I had access to an old "IBM Compatible" PC which my dad had used while in college, and was the initial source of my fascination with technology. It was a modest machine running Windows 95, which was connected to a 14.4 kb/s serial modem, and I had collected a stack of AOL and NetZero demo CDs that I used for internet access. Through this dreadfully slow method I was able to find documentation and resources for learning all about my newly found interest. I had printed a beginner's guide to HTML which I used to learn the basics, and eventually set myself to building my first (and only) website. It was dedicated to another interest of mine at the time, tabletop RPGs.</p>
-                <p>I was obsessed, or highly focused, depending on your perspective. Whenever I didn't have access to a computer I would just handwrite my code in a notebook. It didn't matter whether I was in class, on the bus, or in the cafeteria; wherever I was I would have a way to work on my website. My school teachers weren't pleased when they would realize I wasn't actually taking notes of their class, which got me in trouble on more than a few occasions. Once I was able to get  back to my computer I would type up my notes using my editor of choice, notepad.exe. Then I'd save my creation as filetype .html, and abacadabra-- website magic! I had no idea what an IDE was, nor did I care, because I was a wizard! My RPG fansite was hosted briefly on Geocities.com in the late '90s and it will always be one of my fondest memories.</p> 
-                <P>By the time I reached high school and had to start thinking about my future I already knew I wanted to pursue a career in IT. I took as many electives in the tech lab as my counselors would allow, getting introductions into a variety of subjects and certifications such as A+, Cisco, Visual Basic, CAD and CNC. I had a plan and I was determined to reach my goals, but after graduation things changed, as I'm sure they do for many. I'm not sure exactly why, maybe due to the death of my grandma with whom I lived and by whom I was raised, but I lost focus.  I did eventually earn my degree in Audio Technology, just out of personal interest, but it didn't lead to anything but a series of dead-end jobs.</p>
-                <p>After moving to Seattle from my hometown in search of something different I found a place in the food service industry where I stayed for many years. I worked my way up in a company that I respected and shared similar values. I started at the bottom as a dishwasher, and after my tenure there had been offered the Sous Chef position.  That wouldv'e been the highest position I wouldv'e acquired in my career, had I taken it. Wanderlust has since taken me across the country and back, from food service job to food service job. Until the pandemic hit.</p>
-                <p>When the pandemic hit I found myself suddenly unemployed, and through a disagreement with roommates also without a place to live. The future was not looking bright, and though it was tough for a little while I didn't feel unhappy or burdened by the situation I was in. On the contrary, even under what would seem to be much worse circumstances I felt more positive than I had felt in a long time. I came to realize that I never chose to be in the food industry, I just wound up there, and it wasn't fulfilling. I knew it wasn't making me happy and now I had all the time in the world to do whatever I wanted to do rather than what I thought I had to do. I didn't have television, or video games, or anything like that to distract me anymore. I had my laptop and my cell phone which were not the most capable devices to consume those forms of entertainment, and a limited data plan. Instead I read documentation and watched tutorials on youtube for fun. From Microsoft Docs, to Google Devs, to Linux man pages. Then I remembered what it was I really wanted to do so many years ago, and that is what inspired me to go back to school. So here I am, trying to do what I love to do, and remember that it's never too late. Cheesy, I know, but thats my story, and its my truth.</p>
-            <footer>
-                <p><small>&copy; 2022 by 
-                    <a href="contact.php">Marcus King</a>, All Rights Reserved.</small>
+                <h2>Welcome!</h2>
+                <p>
+                    Welcome to my Web Authoring 1 school portfolio and portal website! The purpose of this site is to introduce myself, demonstrate what I have learned, and provide a foundation for building my future developer portfolio. Over time I will include further links to the projects I have completed, or to those which I have become involved with. Aside from my projects, I will also provide links to resources, lessons, tutorials, and other development related information which I find to be particularly useful. Note that this website is a working copy or "rolling release" of sorts, and as such the format and content provided within it is subject to change. For exact details regarding those changes refer to my <a href="https://github.com/marcus-king" target="_blank">GitHub</a>.
                 </p>
-                <p><small>
-                    <a id="html-checker" href="#">Check HTML</a> |
-                    <a id ="css-checker" href="#">Check CSS</a></small>
-                </p>
-            </footer>
+                <footer>
+                    <p>
+                        <small> 
+                            &copy; 2022 by <a href="contact.php">Marcus King</a>, All Rights Reserved.
+                        </small>
+                    </p>
+                    <p>
+                        <small>
+                            <a id="html-checker" href="#">Check HTML</a> | <a id ="css-checker" href="#">Check CSS</a>
+                        </small>
+                    </p>
+                </footer>
         </div>
-    <script>
-        //https://tinyurl.com/dynamic-html-checker
-        document.getElementById("html-checker").setAttribute("href","https://validator.w3.org/nu/?doc=" + location.href);
-        document.getElementById("css-checker").setAttribute("href","https://jigsaw.w3.org/css-validator?uri=" + location.href);
+        <script>
+            //https://tinyurl.com/dynamic-html-checker
+            document.getElementById("html-checker").setAttribute("href","https://validator.w3.org/nu/?doc=" + location.href);
+            document.getElementById("css-checker").setAttribute("href","https://jigsaw.w3.org/css-validator?uri=" + location.href);
 
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
+            function myFunction() {
+                var x = document.getElementById("myTopnav");
+                if (x.className === "topnav") {
+                    x.className += " responsive";
+                } 
+                else {
+                    x.className = "topnav";
+                }
             }
-        } 
-    </script>
+        </script>
     </body>
 </html>
